[tool.poetry]
name = "whylogs"
version = "0.0.2b3"
description = "A library for creating lightweight summarization of your data"
authors = ["WhyLabs Development <development@whylabs.ai>"]
license = "Apache-2.0"
readme = "README.md"
repository= 'https://github.com/whylabs/whylogs'
packages= [
    { include = 'whylabs', from = 'src'}
]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.scripts]
whylogs = "whylabs.logs.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
protobuf = "^3.12.2"
pyyaml = "^5.3.1"
pandas = "^1.0"
marshmallow = "^3.7.1"
numpy = "^1.18"
whylabs-datasketches="^2.0.0b6"

# A list of all of the optional dependencies
boto3 = { version = "*", optional = true }
s3fs = { version = "*", optional = true }

[tool.poetry.extras]
aws = ["boto3", "s3fs"]

[tool.poetry.dev-dependencies]
argh = "^0.26"
awscli = "^1.18.93"
pytest = "^5.0"
ipython = "*"
ipykernel = "*"
matplotlib = "*"
pytest-runner = "^5.2"
pyarrow = "*"
twine = "*"
tox = "^3.13"


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest
"""

[build-system]
# Minimum requirements for the build system to execute.
requires = ["tox", "poetry>=0.12", "setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "poetry.masonry.api"
